--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,33 +1,31 @@
-
-h1 {
+.cards > h1 {
     text-align: center;
+    margin-top: 10%;
 }
 
-.cards__container {
-    display: flex;
-    flex-flow: column;
-    align-items: center;
-    max-width: 1120px;
-    width: 90%;
-    margin: 0 auto;
+.cards {
+    width: 100%;
 }
 
 .cards__wrapper {
-    position: relative;
     margin: 50px 0 45px;
 }
 
+.card_item {
+    margin: 0 10px 24px 10px;
+}
+
 .cards__items {
-    margin-bottom: 24px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
 }
 
 .cards__item {
-    height: 65vh;
-    display: flex;
-    flex: 1;
-    margin: 0 2rem;
-    border-radius: 10px;
     width: 400px;
+    border-radius: 10px;
     box-shadow: 0 6px 10px 0 rgba(177, 177, 177, 0.2), 0 6px 20px 0 rgba(156, 156, 156, 0.19);
 }
 
@@ -47,19 +45,10 @@ h1 {
     text-decoration: none;
 }
 
-.cards__item__git {
-    position:absolute;
-    right:0;
-    top: 80%;
-    left: 43.5%;
-    bottom: 0;
-    width: 10%;
-    height: 10%;
-}
-
 .cards__item__git img {
-    width: 130%;
-    padding-top: 15px;
+    display: block;
+    margin: auto;
+    width: 10%;
 }
 
 .cards__item__git img:hover {
@@ -113,146 +102,18 @@ h1 {
 
 .cards__item__info {
     padding: 20px 30px 30px;
-    background:white;
-    height: 100%;
-}
-
-.cards__item__text {
-    color: #252e48;
-    font-size: 18px;
-    line-height: 24px;
-}
-
-.cards__item__desc {
-    color: #252e48;
-    font-size: 14px;
-    line-height: 24px;
-    padding-top: 8%;
+    background: whitesmoke;
 }
 
 /* Media Queries */
 
-@media (max-width: 1536px) {
-    .cards__wrapper {
-        position: relative;
-        margin: 30px 0 40px;
-    }
-    .cards__container {
-        padding-top: 0;
-    }
-    .cards__item__desc {
-        font-size: 11px;
-    }
-    .cards__item__text {
-        font-size: 13px;
-    }
-    .cards__item__git {
-        top: 85%;
-    }
-    .cards > h1 {
-        margin-top: 1.5rem;
-        font-size: 30px;
-    }
-}
-@media (max-width: 1366px) {
-    .cards__item__pic-wrap {
-        padding-top: 50%;
-    }
-    .cards__item {
-        width: 300px;
-    }
-}
-
-
 @media only screen and (max-width: 1024px) {
-    .cards__item {
-        margin-bottom: 2rem;
-    }
-}
-@media only screen and (min-width: 1200px) {
-    .content__blog__container {
-        width: 84%;
-    }
-}
-
-@media only screen and (min-width: 1024px) {
-    .cards__items {
-        display: flex;
-    }
-}
-@media screen and (max-width:768px) {
-    .cards__item {
-        height: 25vh;
-    }
     .cards > h1 {
-        margin-top: 0rem;
-        font-size: 30px;
-    }
-    .cards__item__desc {
-        display: none;
-    }
-    .cards__item__git {
-        top: 78%;
-        width: 7%;
-    }
-    .cards > h1 {
-        margin-top: 8rem;
-        font-size: 21px;
+        margin-top: 20%;
     }
 }
-@media (max-width: 540px) and (min-height:720px) {
+@media only screen and (max-width: 768px) {
     .cards__item {
-        height: 22vh;
-        width: 70%;
-    }
-    .cards__item__pic-wrap {
-        padding-top: 35%;
-    }
-    .cards__item__git {
-        top: 70%;
-        left: 88%;
-        width: 7%;
-    }
-    .cards__item__info {
-        padding: 7px 15px 30px;
-    }
-    .cards > h1 {
-        margin-top: 8rem;
-        font-size: 22px;
-    }
-}
-@media only screen and (max-width: 414px) {
-    .cards__item {
-        height: 22vh;
-        width: 70%;
-    }
-    .cards__item__pic-wrap {
-        padding-top: 35%;
-    }
-    .cards__item__git {
-        top: 70%;
-        left: 88%;
-        width: 7%;
-    }
-    .cards__item {
-        margin-bottom: 1rem;
-    }
-    .cards__item__info {
-        padding: 10px 20px 30px;
-    }
-    .cards > h1 {
-        margin-top: 8rem;
-        font-size: 21px;
-    }
-}
-@media screen and (max-width: 320px) {
-    .cards > h1 {
-        font-size: 14px;
-    }
-    .cards__item__info {
-        padding: 5px 11px 30px;
-    }
-    .cards__item__text {
-        font-size: 12px;
+        width: auto;
     }
 }
