--- a/src/components/Pages/Pages.css
+++ b/src/components/Pages/Pages.css
@@ -35,12 +35,12 @@ video {
 }
 .link-container {
     position: fixed;
-    top: 88%;
-    left: 42.5%;
+    top: 87%;
+    left: 42%;
 }
 .link-container img {
-    width: 15%;
-    margin-right: 50px;
+    margin: 0 25px;
+    width: 55px;
     opacity: 0.8;
 }
 .link-container img:hover {
@@ -70,8 +70,8 @@ video {
 .projects {
     height: 100vh;
     display: flex;
-    justify-content: center;
-    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
     background-image: url("https://images.unsplash.com/photo-1589642314445-999ac13b0075?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1353&q=80");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -82,7 +82,9 @@ video {
 /* Contact Section */
 .contact {
     height: 100vh;
+    max-width: 100%;
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
     align-items: center;
     background-image: url("https://images.unsplash.com/photo-1473181488821-2d23949a045a?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80");
@@ -117,7 +119,7 @@ video {
     }
     .link-container img {
         opacity: 1;
-        width: 80%;
+        width: 70%;
         padding-bottom: 10%;
     }
     .scroll {
@@ -147,11 +149,14 @@ video {
         font-size: 18px;
     }
     .link-container {
-        left: 85%;
+        left: 84%;
         top: 64%;
     }
 }
 @media screen and (max-width: 414px) {
+    .projects {
+        height: auto;
+    }
     .home > h1 {
         font-size: 50px;
     }
@@ -171,7 +176,7 @@ video {
         font-size: 18px;
     }
     .link-container {
-        left: 82%;
+        left: 80%;
         top: 71%;
     }
     .link-container img {
@@ -192,5 +197,10 @@ video {
     }
     .about h2 {
         font-size: 14px;
+    }
+}
+@media screen and (max-width: 280px) {
+    .link-container {
+        left: 78%;
     }
 }
