--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -12,7 +12,7 @@
 }
 
 .card_item {
-    margin: 0 10px 24px 10px;
+    margin: 0 40px 40px 10px;
 }
 
 .cards__items {
@@ -24,7 +24,7 @@
 }
 
 .cards__item {
-    width: 400px;
+    width: 350px;
     border-radius: 10px;
     box-shadow: 0 6px 10px 0 rgba(177, 177, 177, 0.2), 0 6px 20px 0 rgba(156, 156, 156, 0.19);
 }
@@ -107,6 +107,14 @@
 
 /* Media Queries */
 
+@media only screen and (max-width: 1600px) {
+    .cards__item {
+        width: 250px;
+    }
+    .card_item {
+        margin: 0 24px 24px 10px;
+    }
+}
 @media only screen and (max-width: 1024px) {
     .cards > h1 {
         margin-top: 20%;
