update project page/add animation

--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -1,127 +1,200 @@
-.cards > h1 {
-    text-align: center;
-    margin-top: 10%;
+.card{
+    margin: 100px auto 0;
+    width: 350px;
+    height: 550px;
+    perspective: 1000px;
 }
 
 .cards {
     width: 100%;
 }
 
-.cards__wrapper {
-    margin: 50px 0 45px;
+.cards h1 {
+    text-align: center;
+    margin-top: 8%;
 }
 
-.card_item {
-    margin: 0 40px 40px 10px;
+.card__inner {
+    width: 100%;
+    height: 100%;
+    transition: transform 1s;
+    transform-style: preserve-3d;
+    cursor: pointer;
+    position: relative;
+}
+
+.card__inner.is-flipped {
+    transform: rotateY(180deg)
+}
+
+.card__face {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    backface-visibility: hidden;
+    overflow: hidden;
+    border-radius: 16px;
+    box-shadow: 0 8px 8px rgba(0, 0, 0, 0.12), 0 8px 8px rgba(0, 0, 0, 0.24);
+}
+
+.card__face--front:hover {
+    filter: brightness(1.1)
+}
+
+.card__face--front {
+    background-image: linear-gradient(to bottom right, #FB9F8B, #077B88);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.card__face--front h2 {
+    color: white;
+    font-size: 32px;
+}
+
+.card__face--front {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.card__face--back {
+    background-color: white;
+    transform: rotateY(180deg);
+}
+
+.card__content {
+    width: 100%;
+    height: 100%;
+}
+
+.card__header {
+    position: relative;
+    padding: 30px 30px 40px;
+}
+
+.card__header:after {
+    content: '';
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: -1;
+    border-radius: 0 0 50% 0;
+    background-image: linear-gradient(to bottom left, #FB9F8B 10%, #077B88 115%);
+}
+
+.project-img {
+    width: 100%;
+    height: 40%;
+}
+
+.card__header h2 {
+    display: inline;
+    font-size: 20px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
+}
+
+.card__body {
+    padding: 3% 3% 0;
+}
+
+.card__body h3 {
+    color: black;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-bottom: 15px;
+}
+
+.card__body p {
+    color: black;
+    font-size: 1.1rem;
+    line-height: 1.5;
 }
 
 .cards__items {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
     list-style-type: none;
 }
 
-.cards__item {
-    width: 350px;
-    border-radius: 10px;
-    box-shadow: 0 6px 10px 0 rgba(177, 177, 177, 0.2), 0 6px 20px 0 rgba(156, 156, 156, 0.19);
+.card__links {
+    text-align: center;
+    margin-top: 2%;
 }
 
-.cards__item:hover {
-    box-shadow: 0 6px 10px 0 rgba(250, 250, 250, 0.2), 0 6px 20px 0 rgba(250, 250, 250, 0.19);
+.card__links a {
+    margin: 0 10%;
 }
 
-.cards__item__link {
-    display: flex;
-    flex-flow: column;
-    width: 100%;
-    box-shadow: 0 6px 20px rgba(56, 125, 255, 0.17);
-    -webkit-filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-    filter: drop-shadow(0 6px 20px rgba(56, 125, 255, 0.017));
-    border-radius: 10px;
-    overflow: hidden;
-    text-decoration: none;
+.card__links img {
+    transition: all 0.4s ease-in-out 0s;
 }
 
-.cards__item__git img {
-    display: block;
-    margin: auto;
-    width: 10%;
-}
-
-.cards__item__git img:hover {
-    filter:brightness(150%);
-}
-
-.cards__item__pic-wrap {
-    position: relative;
-    width: 100%;
-    padding-top: 67%;
-    overflow: hidden;
-}
-
-.fade-img {
-    animation-name: fade-img;
-    animation-duration: 2s;
-}
-
-.cards__item__pic-wrap::after {
-    content: attr(data-category);
-    position: absolute;
-    bottom: 0;
-    margin-left: 10px;
-    padding: 6px 8px;
-    max-width: calc((100%) - 60px);
-    font-size: 12px;
-    font-weight: 700;
-    color: #fff;
-    background-color: #1f98f4;
-    box-sizing: border-box;
-}
-
-.cards__item__img {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    max-width: 100%;
-    height: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    transition: all 0.2s linear;
-}
-
-.cards__item__img:hover {
-    transform: scale(1.1);
-}
-
-.cards__item__info {
-    padding: 20px 30px 30px;
-    background: whitesmoke;
+.card__links img:hover {
+    filter: brightness(1.1);
+    transform: rotate(360deg);
+    transition: all 0.4s ease-in-out 0s;
 }
 
 /* Media Queries */
 
 @media only screen and (max-width: 1600px) {
-    .cards__item {
-        width: 250px;
-    }
-    .card_item {
-        margin: 0 24px 24px 10px;
+    .card{
+        width: 300px;
+        height: 500px;
     }
 }
 @media only screen and (max-width: 1024px) {
     .cards > h1 {
-        margin-top: 20%;
+        margin-top: 15%;
     }
 }
-@media only screen and (max-width: 768px) {
-    .cards__item {
-        width: auto;
+@media (max-width: 1024px) and (max-height:600px) {
+    .card {
+        width: 220px;
+        height: 420px;
+    }
+    .card__body h3 {
+        font-size: 1rem;
+    }
+    .card__body p {
+        font-size: .8rem;
+    }
+}
+@media only screen and (max-width: 600px) {
+    .card__body h3 {
+        font-size: 1rem;
+    }
+    .card__body p {
+        font-size: .9rem;
+    }
+    .card{
+        width: 250px;
+        height: 450px;
+    }
+}
+@media only screen and (max-width: 414px) {
+    .cards > h1 {
+        margin-top: 22%;
+    }
+}
+@media screen and (max-width: 376px) {
+    .card__body h3 {
+        font-size: .9rem;
+    }
+    .card__body p {
+        font-size: .7rem;
+    }
+    .card{
+        width: 200px;
+        height: 400px;
     }
 }
