--- a/src/components/Pages/Pages.css
+++ b/src/components/Pages/Pages.css
@@ -1,5 +1,5 @@
 /* Home section */
-video {
+.homepage-video {
     object-fit: cover;
     width: 100%;
     position: fixed;
@@ -33,10 +33,13 @@ video {
     right: 4%;
     top: 85%;
 }
-.link-container {
-    position: fixed;
-    top: 87%;
-    left: auto;
+.link-container.home-page {
+    position: absolute;
+    top: 90%;
+}
+.link-container.contact-page {
+    position: absolute;
+    top: 390%;
 }
 .link-container img {
     margin: 0 25px;
@@ -50,16 +53,25 @@ video {
 /* About section */
 .about {
     height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
     text-align: center;
     background: rgb(230, 230, 230);
     color: rgb(161, 20, 20);
 }
-.about h1, h2 {
-    width: 50%;
+.about-container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 75%;
+    margin:auto;
+}
+.about-container h1 {
+    width: 100%;
+    padding-bottom: 4%;
+}
+.about-container h2 {
+    margin: 0 9% 0 0;
 }
 .lambda {
     padding-top: 10%;
@@ -72,6 +84,7 @@ video {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
     background-image: url("https://images.unsplash.com/photo-1589642314445-999ac13b0075?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1353&q=80");
     background-repeat: no-repeat;
     background-attachment: fixed;
@@ -110,23 +123,74 @@ video {
         font-size: 80px;
     }
 }
+@media (max-width: 1280px) {
+    .projects {
+        height: 105vh;
+    }
+    .about-container h1 {
+        margin-left: 0;
+    }
+    .about-container img {
+        margin-left: 0;
+    }
+}
+@media (max-width: 1200px) {
+    .home > h1 {
+        font-size: 80px;
+    }
+    .projects {
+        height: 135vh;
+    }
+    .link-container.contact-page {
+        top: 420%;
+    }
+}
+@media (max-width: 1024px) and (max-height:600px) {
+    .link-container.home-page {
+        top: 85%;
+    }
+    .about-container h1, h2 {
+        font-size: 18px;
+    }
+    .about-container h1 {
+        font-size: 20px;
+    }
+    .about-container img {
+        width: 30%;
+    }
+    .link-container.contact-page {
+        width: 10%;
+        left: 76%;
+        top: 380%;
+    }
+}
+@media screen and (max-width:820px){
+    .about-container img {
+        width: 60%;
+    }
+}
 @media screen and (max-width:768px){
-    .link-container {
+    .link-container.home-page {
         left: 82%;
         height: 100%;
         width: 13%;
         top: 60%;
     }
+    .link-container.contact-page {
+        left: 82%;
+        width: 13%;
+        top: 410%;
+    }
     .link-container img {
         opacity: 1;
-        width: 70%;
+        width: 60%;
         padding-bottom: 10%;
     }
     .scroll {
         display:none;
     }
-    .about h1, h2 {
-        width: 70%;
+    .projects {
+        height: 143vh;
     }
 }
 @media (max-width: 540px) and (min-height:720px) {
@@ -142,21 +206,30 @@ video {
     .scroll {
         display: none;
     }
-    .about h1 {
+    .about-container h1 {
         font-size: 23px;
     }
-    .about h2 {
+    .about-container h2 {
         font-size: 18px;
     }
-    .link-container {
-        left: 84%;
-        top: 64%;
+    .projects {
+        height: 190vh;
+    }
+    .link-container.contact-page {
+        top: 450%;
+    }
+}
+@media screen and (max-width: 500px) {
+    .projects {
+        height: 300vh;
+    }
+    .link-container.contact-page {
+        left: 82%;
+        width: 13%;
+        top: 520%;
     }
 }
 @media screen and (max-width: 414px) {
-    .projects {
-        height: auto;
-    }
     .home > h1 {
         font-size: 50px;
     }
@@ -169,33 +242,48 @@ video {
     .scroll {
         display: none;
     }
-    .about h1 {
+    .about-container h1 {
         font-size: 23px;
+        margin-left: 0;
     }
-    .about h2 {
+    .about-container h2 {
         font-size: 18px;
     }
-    .link-container {
-        left: 80%;
-        top: 71%;
+    .about-container img {
+        width: 80%;
     }
     .link-container img {
         width: 90%;
     }
+    .link-container.home-page {
+        left: 78%;
+    }
+    .link-container.contact-page {
+        left: 78%;
+        top: 550%;
+    }
+}
+@media screen and (max-width: 375px) {
+    .projects {
+        height: 350vh;
+    }
+    .link-container.contact-page {
+        top: 600%;
+    }
 }
 @media screen and (max-width: 360px) {
-    .about h1 {
+    .about-container h1 {
         font-size: 21px;
     }
-    .about h2 {
+    .about-container h2 {
         font-size: 16px;
     }
 }
 @media screen and (max-width: 320px) {
-    .about h1 {
+    .about-container h1 {
         font-size: 18px;
     }
-    .about h2 {
+    .about-container h2 {
         font-size: 14px;
     }
 }
