--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,11 @@
   font-family: 'Hind Guntur', sans-serif;
 }
 
+html, body {
+  max-width: 100%;
+  overflow-x: hidden;
+}
+
 /* Hide scrollbar for Chrome, Safari and Opera */
 *::-webkit-scrollbar {
   display: none;
