--- a/src/components/Pages/Pages.css
+++ b/src/components/Pages/Pages.css
@@ -78,6 +78,7 @@
 /* Projects Section */
 .projects {
     height: 100vh;
+    max-height: 100%;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
