--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -144,6 +144,63 @@
     transition: all 0.4s ease-in-out 0s;
 }
 
+.carousel {
+    width: 100vw;
+    height: 100vh;
+    position: relative;
+}
+
+.slide {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition-duration: 1s ease;
+}
+
+.slide.active {
+    opacity: 1;
+    z-index: 1;
+    transform: scale(1.05);
+    transition-duration: 1s;
+}
+
+.carousel-button {
+    position: absolute;
+    background: none;
+    border: none;
+    font-size: 4rem;
+    top: 50%;
+    transform: translateY(-50%);
+    color: rgba(255, 255, 255, .5);
+    cursor: pointer;
+    border-radius: .25rem;
+    padding: 0 .5rem;
+    background-color: rgba(0, 0, 0, .1);
+    z-index: 2;
+}
+
+.carousel-button:hover {
+    cursor: pointer;
+}
+
+.carousel-button:hover,
+.carousel-button:focus {
+    color: white;
+    background-color: rgba(0, 0, 0, .2);
+}
+
+.carousel-button:focus {
+    outline: 1px solid black;
+}
+
+.carousel-button.prev {
+    left: 1rem;
+}
+
+.carousel-button.next {
+    right: 1rem;
+}
+
 /* Media Queries */
 
 @media only screen and (max-width: 1600px) {
@@ -152,15 +209,33 @@
         height: 500px;
     }
 }
+@media (max-width: 1280px) and (max-height:800px) {
+    .cards > h1 {
+        margin-top: 7%;
+    }
+    .card {
+        width: 280px;
+        height: 480px;
+        margin-top: 3%;
+    }
+}
 @media only screen and (max-width: 1024px) {
     .cards > h1 {
         margin-top: 15%;
     }
+    .carousel-button {
+        top: 35%;
+    }
 }
 @media (max-width: 1024px) and (max-height:600px) {
+    .cards > h1 {
+        margin-top: 7%;
+        font-size: 1.5rem;
+    }
     .card {
-        width: 220px;
-        height: 420px;
+        width: 260px;
+        height: 380px;
+        margin-top: 3%;
     }
     .card__body h3 {
         font-size: 1rem;
@@ -179,6 +254,7 @@
     .card{
         width: 250px;
         height: 450px;
+        margin-top: 10%;
     }
 }
 @media only screen and (max-width: 414px) {
@@ -187,6 +263,9 @@
     }
 }
 @media screen and (max-width: 376px) {
+    .cards > h1 {
+        font-size: 1.4rem;
+    }
     .card__body h3 {
         font-size: .9rem;
     }
@@ -195,6 +274,7 @@
     }
     .card{
         width: 200px;
-        height: 400px;
+        height: 380px;
+        margin-top: 6%;
     }
 }
