--- a/src/components/Cards/Cards.css
+++ b/src/components/Cards/Cards.css
@@ -261,6 +261,14 @@
     .cards > h1 {
         margin-top: 22%;
     }
+    .card{
+        width: 220px;
+        height: 390px;
+        margin-top: 6%;
+    }
+    .carousel-button {
+        top: 28%;
+    }
 }
 @media screen and (max-width: 376px) {
     .cards > h1 {
